--- a/catalog.html
+++ b/catalog.html
@@ -5,16 +5,15 @@
   <meta charset="utf-8">
   <title>HTML Academy: Техномарт</title>
 
-
-    <link rel="icon" href="favicon.ico">
-    <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/180.png">
-    <link rel="manifest" href="manifest.webmanifest">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicon180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
   <header>
-      <a href="index.html"><img src="img/main-logo1.svg" width="220" height="47" alt="Главный логотив"></a>
+      <a href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
     <input type="search" placeholder="Поиск:">
     <a href="#">
       Закладки: 0
@@ -200,13 +199,13 @@
       </p>
       <ul>
         <li>
-          <a href="#"><img src="img/vk.svg" alt="VK"></a>
+          <a href="#">VK</a>
         </li>
         <li>
-          <a href="#"><img src="img/facebook.svg" alt="Facebook"></a>
+          <a href="#">Facebook</a>
         </li>
         <li>
-          <a href="#"><img src="img/inst.svg" alt="Instagram"></a>
+          <a href="#">Instagram</a>
         </li>
       </ul>
       <p>Обратная связь:</p><br>
