--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </section>
   </main>
   <footer>
-        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Нижний логотив"></a>
+        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотив Техномарт"></a>
       <address>
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
@@ -217,6 +217,6 @@
       <p>Обратная связь:</p><br>
       <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
       <p>Разработано — </p><br>
-      <a href=" htmlacademy.ru"> htmlacademy.ru</a>
+      <a href="htmlacademy.ru"> htmlacademy.ru</a>
   </footer>
 </body>
