--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </li>
       </ul>
     </section>
-    <section class="popular-product-section">
+    <section class="popular-product">
       <div class="popular-staff">
         <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
         <a class="button" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
@@ -120,7 +120,7 @@
         </li>
       </ul>
     </section>
-    <section class="popular-firms-section">
+    <section class="popular-firms">
       <div class="popular-staff">
         <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
         <a class="button" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
@@ -145,7 +145,7 @@
         <li class="button-toogle"><label for="button-2">Гарантия</label></li>
         <li class="button-toogle"><label for="button-3">Кредит</label></li>
       </ul>
-      <h2 class="deliv">ДОСТАВКА</h2>
+      <h2 class="service-title">ДОСТАВКА</h2>
       <p class="about-item">
         Мы с удовольствием доставим ваш товар прямо<br>
         к вашему подъезду совершенно бесплатно!<br>
@@ -178,7 +178,7 @@
       </section>
     </div>
   </main>
-  <section class="section-footer-first">
+  <div class="section-footer-first">
     <footer class="main-footer">
       <a class="logo-footer" href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотив Техномарт"></a>
       <address class="address-footer">
@@ -198,8 +198,8 @@
         <li class="nav-button"><a href="#">Инструмент</a></li>
         <li class="nav-button"><a href="#">Спецпредлжения</a></li>
       </ul>
-  </section>
-  <section class="section-footer-second">
+  </div>
+  <div class="section-footer-second">
     <p class="copiright">
       © 2010-2016 Компания «Техномарт»<br>
       Все права защищены
@@ -221,7 +221,7 @@
       <p class="lead">Разработано — </p><br>
       <a class="adress-mail" href="htmlacademy.ru"> htmlacademy.ru</a>
     </div>
-  </section>
+  </div>
   </footer>
   <section class="modal">
     <form class="feedback-form" action="index.html" method="post">
