--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a class="basket" href="#">Корзина: 0</a></li>
       <li><a class="ordering" href="#">Оформить заказ</a></li>
     </ul>
-    <p class="title">Интернет-магазин<br>
+    <p class="title-header">Интернет-магазин<br>
       строительных материалов<br>
       и инструментов для ремонта</p>
     <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
@@ -87,7 +87,7 @@
     </section>
     <section>
       <div class="popular-staff">
-        <h2>ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
+        <h2 class="title">ПОПУЛЯРНЫЕ ТОВАРЫ:</h2>
         <a class="button" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
       </div>
       <ul>
@@ -122,7 +122,7 @@
     </section>
     <section class="popular-firms">
       <div class="popular-staff">
-        <h2>ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
+        <h2 class="title">ПОПУЛЯРНЫЕ ПРОИЗВОДИТЕЛИ:</h2>
         <a class="button" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
       </div>
       <ul class="firms-list">
@@ -137,7 +137,7 @@
       </ul>
     </section>
     <section>
-      <h2>СЕРВИСЫ</h2>
+      <h2 class="title">СЕРВИСЫ</h2>
       <p class="about-item">Хороший интернет-магазин отличается от плохого не только ценами!<br>
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       <ul class=>
@@ -155,7 +155,7 @@
     </section>
     <div class="section-about">
       <section>
-        <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+        <h2 class="title">КОМПАНИЯ «ТЕХНОМАРТ»</h2>
         <p class="about-item">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
           строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
         <p></p>
@@ -170,7 +170,7 @@
       </section>
 
       <section>
-        <h2>КОНТАКТЫ</h2>
+        <h2 class="title">КОНТАКТЫ</h2>
         <p class="about-item">Вы можете забрать товар сами,<br>
           заехав в наш офис.</p>
         <a href="#">тут будет карта</a>
