--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -9,207 +9,238 @@
   <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon180.png">
   <link rel="manifest" href="manifest.webmanifest">
+
+  <link href="css/normalize.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <header>
-      <a href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
-    <input type="search" placeholder="Поиск:">
-    <a href="#">
-      Закладки: 0
-    </a>
-    <ul>
-      <li><a href="#">Корзина: 0</a></li>
-      <li><a href="#">Оформить заказ</a></li>
+<body class="page-body">
+  <header class="main-header">
+    <a class="main-header-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
+    <input class="search" type="search" placeholder="Поиск:">
+    <ul class="list-orders">
+      <li><a class="bookmarks" href="#">Закладки:0<a></li>
+      <li><a class="basket" href="#">Корзина: 0</a></li>
+      <li><a class="ordering" href="#">Оформить заказ</a></li>
     </ul>
-    <p>Интернет-магазин<br>
+    <p class="title-header">Интернет-магазин<br>
       строительных материалов<br>
       и инструментов для ремонта</p>
-    <p>+7 (812) 555-05-55</p>
-    <p>
+    <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
+    <p class="address">
       г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
     </p>
-    <a href="#">
-      Войти
-    </a>
-    <a href="#">
-      Регистрация
-    </a>
-    <nav>
-      <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Спецпредложения</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
+    <div class="user-navigation">
+      <a href="#">
+        Войти
+      </a>
+      <a href="#">
+        Регистрация
+      </a>
+    </div>
+    <nav class="main-navigation">
+      <ul class="navigation color-nav">
+        <li class="nav-button"><a href="index.html">Главная</a></li>
+        <li class="nav-button"><a href="#">Компания</a></li>
+        <li class="nav-button"><a href="#">Каталог</a></li>
+        <li class="nav-button"><a href="#">Спецпредложения</a></li>
+        <li class="nav-button"><a href="#">Доставка</a></li>
+        <li class="nav-button"><a href="#">Контакты</a></li>
       </ul>
     </nav>
   </header>
-  <main>
+  <main class="main-catalog">
     <section>
       <ul>
-        <li><a href="#">КАТАЛОГ</a></li>
-        <li>ИНСТРУМЕНТ</li>
-        <li>ПЕРФОРАТОРЫ</li>
+        <li class="catalog-title"><a href="#">КАТАЛОГ</a></li>
+        <li class="catalog-title"><a href="#">ИНСТРУМЕНТ</a></li>
+        <li class="catalog-title"><a href="#">ПЕРФОРАТОРЫ</a></li>
       </ul>
     </section>
     <section>
-      <h2>ПЕРФОРАТОРЫ</h2>
+      <div class="basic-background">
+        <h2 class="service-title">ПЕРФОРАТОРЫ</h2>
+      </div>
       <form action="#" method="get">
-        <span>ФИЛЬТР:</span>
-        <fieldset>
-          <legend>ЦЕНА:</legend>
+        <span class="filter-title sorting">ФИЛЬТР:</span>
+        <fieldset class="form">
+          <legend class="filter-heading">ЦЕНА:</legend>
           <!--тут будет ползунок цены-->
-          <label><input type="number" value="100"></label>
+          <label class="filter-price"><input type="number" value="100"></label>
           <span>-</span>
-          <label><input type="number" value="600"></label>
+          <label class="filter-price"><input type="number" value="600"></label>
         </fieldset>
-        <fieldset>
-          <legend>ПРОИЗВОДИТЕЛИ:</legend>
+        <fieldset class="form">
+          <legend class="filter-heading">ПРОИЗВОДИТЕЛИ:</legend>
           <input type="checkbox" name="firm1" id="ch1" value="Bosch">
-          <label for="ch1">BOSCH</label>
+          <label class="filter-item" for="ch1">BOSCH</label>
           <input type="checkbox" name="firm1" id="ch2" value="interskop">
-          <label for="ch2">ИНТЕРСКОЛ</label>
+          <label class="filter-item" for="ch2">ИНТЕРСКОЛ</label>
           <input type="checkbox" name="firm1" id="ch3" value="MAKITA">
-          <label for="ch3">MAKITA</label>
+          <label class="filter-item" for="ch3">MAKITA</label>
           <input type="checkbox" name="firm1" id="ch4" value="DEWALT">
-          <label for="ch4">DeWALT</label>
+          <label class="filter-item" for="ch4">DeWALT</label>
           <input type="checkbox" name="firm1" id="ch5" value="HITACHI">
-          <label for="ch5">HITACHI</label>
+          <label class="filter-item" for="ch5">HITACHI</label>
         </fieldset>
-        <fieldset>
-          <legend>ПИТАНИЕ:</legend>
+        <fieldset class="form">
+          <legend class="filter-heading">ПИТАНИЕ:</legend>
           <input type="radio" name="supply" id="rd1" value="accumulator">
-          <label for="rd1">АККУМУЛЯТОРНЫЕ</label>
+          <label class="filter-item" for="rd1">АККУМУЛЯТОРНЫЕ</label>
           <input type="radio" name="supply" id="rd2" value="lan">
-          <label for="rd2">СЕТЕВЫЕ</label>
+          <label class="filter-item" for="rd2">СЕТЕВЫЕ</label>
         </fieldset>
-        <button type="submit">Показать</button>
+        <button class="filter-show" type="submit">Показать</button>
       </form>
     </section>
-    <section>
-      <span>СОРТИРОВКА:</span>
+    <section class="sorting">
+      <span class="filter-title">СОРТИРОВКА:</span>
       <ul>
-        <li><a href="#">ПО ЦЕНЕ</a></li>
-        <li><a href="#">ПО ТИПУ</a></li>
-        <li><a href="#">ПО ФУНКЦИОНАЛУ</a></li>
+        <li class="filter-button"><a href="#">ПО ЦЕНЕ</a></li>
+        <li class="filter-button"><a href="#">ПО ТИПУ</a></li>
+        <li class="filter-button"><a href="#">ПО ФУНКЦИОНАЛУ</a></li>
       </ul>
     </section>
     <section>
       <ul>
-        <li><a href="#">КУПИТЬ</a>
+        <li drill-item><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor3.jpg" width="144" height="128"  alt="Перфоратор BOSCH BFG 6000">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <a href="#">25500 Р.</a>
+          <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
+          <span class="old price">30500 Р.</span>
+          <a class="buy-button" href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <a href="#">25500 Р.</a>
+          <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
+          <span class="old-price">30500 Р.</span>
+          <a class="buy-button" href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>32500 Р.</span>
-          <a href="#">25500 Р.</a>
+          <img class="drill-img" src="img/perfor3.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
+          <span class="old-price">32500 Р.</span>
+          <a class="buy-button" href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <span>22500 Р.</span>
-          <a href="#">15500 Р.</a>
+          <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
+          <span class="old-price">22500 Р.</span>
+          <a class="buy-button" href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <a href="#">25500 Р.</a>
+          <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
+          <span class="old-price">30500 Р.</span>
+          <a class="buy-button" href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
-          <a href="#">12500 Р.</a>
+          <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
+          <a class="buy-button" href="#">12500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
-          <h3>Перфоратор BOSCH BFG 3000</h3>
-          <span>22500 Р.</span>
-          <a href="#">15500 Р.</a>
+          <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 3000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 3000</h3>
+          <span class="old-price">22500 Р.</span>
+          <a class="buy-button" href="#">15500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
-          <h3>Перфоратор BOSCH BFG 6000</h3>
-          <span>30500 Р.</span>
-          <a href="#">25500 Р.</a>
+          <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 6000</h3>
+          <span class="old-price">30500 Р.</span>
+          <a class="buy-button" href="#">25500 Р.</a>
         </li>
         <li><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
-          <img src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
-          <h3>Перфоратор BOSCH BFG 2000</h3>
-          <a href="#">25500 Р.</a>
+          <img class="drill-img" src="img/perfor2.jpg" width="127" height="112" alt="Перфоратор BOSCH BFG 2000">
+          <h3 class="drill-title">Перфоратор BOSCH BFG 2000</h3>
+          <a class="buy-button" href="#">25500 Р.</a>
         </li>
       </ul>
-      <ul>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">СЛЕДУЮЩАЯ</a></li>
+      <ul class="pagination">
+        <li><a class="pagination-active" href="#">1</a></li>
+        <li><a class="pagination-none" href="#">2</a></li>
+        <li><a class="pagination-none" href="#">3</a></li>
+        <li><a class="pagination-none" href="#">СЛЕДУЮЩАЯ</a></li>
       </ul>
     </section>
-    <section>
-      <h2>ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
-      <p>Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+    <section class="basic-background">
+      <h2 class="title">ПАРА СЛОВ О ПЕРФОРАТОРАХ</h2>
+      <p class="about-item">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
         Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br>
         В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
     </section>
   </main>
-  <footer>
-        <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотип Техномарт"></a>
-      <address>
+  <footer class="main-footer">
+    <div class="section-footer-first">
+      <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотив Техномарт"></a>
+      <address class="address-footer">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
         +7 (812) 555-05-55
       </address>
-      <ul>
-        <li><a href="#">Компания</a></li>
-        <li><a href="#">Новости</a></li>
-        <li><a href="#">Каталог</a></li>
-        <li><a href="#">Доставка</a></li>
-        <li><a href="#">Контакты</a></li>
+      <ul class="navigation color-nav-footer">
+        <li class="nav-button"><a href="#">Компания</a></li>
+        <li class="nav-button"><a href="#">Новости</a></li>
+        <li class="nav-button"><a href="#">Каталог</a></li>
+        <li class="nav-button"><a href="#">Доставка</a></li>
+        <li class="nav-button"><a href="#">Контакты</a></li>
       </ul>
-      <ul>
-        <li><a href="#">Материал</a></li>
-        <li><a href="#">Техника</a></li>
-        <li><a href="#">Инструмент</a></li>
-        <li><a href="#">Спецпредлжения</a></li>
+      <ul class="navigation color-nav-footer-second">
+        <li class="nav-button"><a href="#">Материал</a></li>
+        <li class="nav-button"><a href="#">Техника</a></li>
+        <li class="nav-button"><a href="#">Инструмент</a></li>
+        <li class="nav-button"><a href="#">Спецпредлжения</a></li>
       </ul>
-      <p>
+    </div>
+    <div class="section-footer-second">
+      <p class="copiright">
         © 2010-2016 Компания «Техномарт»<br>
         Все права защищены
       </p>
-      <ul>
+      <ul class="socials">
         <li>
-          <a href="#">VK</a>
+          <a href="#"><img src="img/icon-vk.svg" alt="VK"></a>
         </li>
         <li>
-          <a href="#">Facebook</a>
+          <a href="#"><img src="img/icon-fb.svg" alt="FB"></a>
         </li>
         <li>
-          <a href="#">Instagram</a>
+          <a href="#"><img src="img/icon-insta.svg" alt="INSTAGRAM"></a>
         </li>
       </ul>
-      <p>Обратная связь:</p><br>
-      <a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
-      <p>Разработано — </p><br>
-      <a href="htmlacademy.ru"> htmlacademy.ru</a>
+      <div class="feedback">
+        <p class="lead">Обратная связь:</p><br>
+        <a class="adress-mail" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        <p class="lead">Разработано — </p><br>
+        <a class="adress-mail" href="htmlacademy.ru"> htmlacademy.ru</a>
+      </div>
+    </div>
   </footer>
+  <section class="modal">
+    <form class="feedback-form" action="index.html" method="post">
+      <p>
+        <label for="name-feedback">Ваше имя:</label>
+        <input id="name-feedback" type="text" name="name" placeholder="Имя Фамилия">
+      </p>
+      <p>
+        <label>Ваш e-mail:</label>
+        <input id="mail-feedback" type="email" name="email" placeholder="email@example.com">
+      </p>
+      <p>
+        <label>Текст письма:</label>
+        <textarea name="text-feedback" rows="8" cols="80" placeholder="В свободной форме"></textarea>
+      </p>
+      <a class="button" href="#">ОТПРАВИТЬ</a>
+    </form>
+  </section>
+</body>
