--- a/catalog.html
+++ b/catalog.html
@@ -16,8 +16,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body class="page-body">
-  <header class="main-header">
+<body>
+  <header>
     <a class="main-header-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
     <input class="search" type="search" placeholder="Поиск:">
     <ul class="list-orders">
@@ -54,9 +54,9 @@
   <main class="main-catalog">
     <section>
       <ul>
-        <li class="catalog-title"><a href="#">КАТАЛОГ</a></li>
-        <li class="catalog-title"><a href="#">ИНСТРУМЕНТ</a></li>
-        <li class="catalog-title"><a href="#">ПЕРФОРАТОРЫ</a></li>
+        <li class="catalog-title"><a href="#">Каталог</a></li>
+        <li class="catalog-title"><a href="#">Инструменты</a></li>
+        <li class="catalog-title"><a href="#">Перфораторы</a></li>
       </ul>
     </section>
     <section>
@@ -64,9 +64,9 @@
         <h2 class="service-title">Перфораторы</h2>
       </div>
       <form action="#" method="get">
-        <span class="filter-title sorting">ФИЛЬТР:</span>
+        <span class="filter-title sorting">Фильтр:</span>
         <fieldset class="form">
-          <legend class="filter-heading">ЦЕНА:</legend>
+          <legend class="filter-heading">Цена:</legend>
           <!--тут будет ползунок цены-->
           <label class="filter-price"><input type="number" value="100"></label>
           <span>-</span>
@@ -98,9 +98,9 @@
     <section class="sorting">
       <span class="filter-title">Сортировка:</span>
       <ul>
-        <li class="filter-button"><a href="#">ПО ЦЕНЕ</a></li>
-        <li class="filter-button"><a href="#">ПО ТИПУ</a></li>
-        <li class="filter-button"><a href="#">ПО ФУНКЦИОНАЛУ</a></li>
+        <li class="filter-button"><a href="#">По цене</a></li>
+        <li class="filter-button"><a href="#">По типу</a></li>
+        <li class="filter-button"><a href="#">По функционалу</a></li>
       </ul>
     </section>
     <section>
@@ -251,7 +251,7 @@
         <label>Текст письма:</label>
         <textarea name="text-feedback" rows="8" cols="80" placeholder="В свободной форме"></textarea>
       </p>
-      <a class="button" href="#">ОТПРАВИТЬ</a>
+      <a class="button" href="#">Отправить</a>
     </form>
   </section>
 </body>
