--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body class="page-body">
-  <header class="main-header">
-    <a class="main-header-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
+<body>
+  <header>
+    <a href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
     <input class="search" type="search" placeholder="Поиск:">
     <ul class="list-orders">
       <li><a class="bookmarks" href="#">Закладки:0<a></li>
@@ -57,30 +57,30 @@
       <ul class="catalog-list">
         <li class="catalog-item material">
           <h2>Материалы</h2>
-          <a class="catalog-button" href="#">НА ЛЮБОЙ ВСКУС</a>
+          <a class="catalog-button" href="#">На любой вкус</a>
         </li>
         <li class="catalog-item tools">
           <h2>Инструмент</h2>
-          <a class="catalog-button" href="#">НА ВСЕ СЛУЧАИ</a>
+          <a class="catalog-button" href="#">На все случаи</a>
         </li>
         <li class="catalog-item tech">
           <h2>Техника</h2>
-          <a class="catalog-button" href="#">ДЛЯ СТРОЙКИ</a>
+          <a class="catalog-button" href="#">Для стройки</a>
         </li>
         <li class="catalog-item sales">
           <h2>Скидка 50%</h2>
-          <a class="catalog-button" href="#">А 350 ТОВАРОВ</a>
+          <a class="catalog-button" href="#">А 350 товаров</a>
         </li>
         <li class="catalog-item deliver">
           <h2>ДОСТАВКА</h2>
-          <a class="catalog-button" href="#">БЕСПЛАТНО</a>
+          <a class="catalog-button" href="#">Бесплатно</a>
         </li>
         <li class="catalog-slide">
           <h2 class="title-popular">Перфораторы</h2>
           <span class="color-staff">Настоящие мужские игрушки</span>
           <button type="button" name="slide" disabled></button>
           <button type="button" name="slide"></button>
-          <a class="button" href="catalog.html">ОТКРЫТЬ КАТАЛОГ</a>
+          <a class="button" href="catalog.html">Открыть каталог</a>
           </div>
         </li>
       </ul>
@@ -88,7 +88,7 @@
     <section>
       <div class="popular-staff">
         <h2 class="title">Популярные товары:</h2>
-        <a class="button" href="#">ВСЕ ПОПУЛЯРНЫЕ ТОВАРЫ</a>
+        <a class="button" href="#">Все популярные товары</a>
       </div>
       <ul>
         <li class="drill-item">
@@ -123,7 +123,7 @@
     <section class="popular-firms">
       <div class="popular-staff">
         <h2 class="title">Популярные производители:</h2>
-        <a class="button" href="#">ВСЕ ПРОИЗВОДИТЕЛИ</a>
+        <a class="button" href="#">Все производители</a>
       </div>
       <ul class="firms-list">
         <li><a href="#"><img src="img/partners1.png" width="220" height="145" alt="BOSCH"></a></li>
@@ -166,7 +166,7 @@
           <li>Автотрейдинг</li>
           <li>ЖелДорЭкспедиция</li>
         </ul>
-        <a class="button" href="#">ПОДРОБНЕЕ О КОМПАНИИ</a>
+        <a class="button" href="#">Подробнее о компании</a>
       </section>
 
       <section>
@@ -174,7 +174,7 @@
         <p class="about-item">Вы можете забрать товар сами,<br>
           заехав в наш офис.</p>
         <a href="#">тут будет карта</a>
-        <a class="button" href="#">ЗАБЛУДИЛИСЬ? НАПИШИТЕ НАМ!</a>
+        <a class="button" href="#">Заблудились? напишите нам</a>
       </section>
     </div>
   </main>
@@ -248,7 +248,7 @@
         <label>Текст письма:</label>
         <textarea name="text-feedback" rows="8" cols="80" placeholder="В свободной форме"></textarea>
       </p>
-      <a class="button" href="#">ОТПРАВИТЬ</a>
+      <a class="button" href="#">Отправить</a>
     </form>
   </section>
 </body>
