--- a/index.html
+++ b/index.html
@@ -16,47 +16,51 @@
 </head>
 
 <body class="page-body">
-  <header class="main-header">
+
+
+  <header class="main-header basic-background">
     <div class="background-nav">
-    <a class="main-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
-    <input class="background-nav" type="search" placeholder="Поиск:">
-    <ul class="list-orders">
-      <li><a class="bookmarks" href="#">Закладки:0<a></li>
-      <li><a class="basket" href="#">Корзина: 0</a></li>
-      <li><a class="ordering" href="#">Оформить заказ</a></li>
-    </ul>
-  </div>
-    <div class="whaper-nav-down background">
-    <p class="title-header">Интернет-магазин<br>
-      строительных материалов<br>
-      и инструментов для ремонта</p>
-    <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
-    <p class="address">
-      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-    </p>
-    <div class="user-navigation">
-      <a href="#">
-        Войти
-      </a>
-      <a href="#">
-        Регистрация
-      </a>
-    </div>
-    <nav class="main-navigation">
-      <ul class="navigation color-nav">
-        <li class="nav-button"><a href="index.html">Главная</a></li>
-        <li class="nav-button"><a href="#">Компания</a></li>
-        <li class="nav-button"><a href="#">Каталог</a></li>
-        <li class="nav-button"><a href="#">Спецпредложения</a></li>
-        <li class="nav-button"><a href="#">Доставка</a></li>
-        <li class="nav-button"><a href="#">Контакты</a></li>
+      <div class="container">
+      <a href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
+      <input class="background-nav" type="search" placeholder="Поиск:">
+      <ul class="list-orders">
+        <li><a class="bookmarks" href="#">Закладки:0<a></li>
+        <li><a class="basket" href="#">Корзина: 0</a></li>
+        <li><a class="ordering" href="#">Оформить заказ</a></li>
       </ul>
-    </nav>
+    </div>
+    </div>
+        <p class="title-header">Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта</p>
+        <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
+        <p class="address">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
+      <div class="user-navigation">
+        <a href="#">
+          Войти
+        </a>
+        <a href="#">
+          Регистрация
+        </a>
+      </div>
+      <nav class="main-navigation wrapper">
+        <ul class="navigation color-nav">
+          <li class="nav-button"><a href="index.html">Главная</a></li>
+          <li class="nav-button"><a href="#">Компания</a></li>
+          <li class="nav-button"><a href="#">Каталог</a></li>
+          <li class="nav-button"><a href="#">Спецпредложения</a></li>
+          <li class="nav-button"><a href="#">Доставка</a></li>
+          <li class="nav-button"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
     </div>
   </header>
 
-  <main class="container">
-    <section>
+  <main>
+    <section class="wrapper">
       <ul class="catalog-list">
         <li class="catalog-item material">
           <h2>Материалы</h2>
@@ -87,7 +91,7 @@
         </li>
       </ul>
     </section>
-    <section>
+    <section class="wrapper">
       <div class="popular-staff">
         <h2 class="title">Популярные товары:</h2>
         <a class="button" href="#">Все популярные товары</a>
@@ -122,7 +126,7 @@
         </li>
       </ul>
     </section>
-    <section class="popular-firms">
+    <section class="popular-firms wrapper">
       <div class="popular-staff">
         <h2 class="title">Популярные производители:</h2>
         <a class="button" href="#">Все производители</a>
@@ -138,7 +142,8 @@
         <li class="firms-item"><a href="#"><img src="img/partners8.png" width="220" height="145" alt="METABO"></a></li>
       </ul>
     </section>
-    <section>
+    <section class="section-about basic-background">
+      <div class="wrapper">
       <h2 class="title">Сервисы</h2>
       <p class="about-item">Хороший интернет-магазин отличается от плохого не только ценами!<br>
         Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
@@ -154,34 +159,31 @@
         Ведь мы неплохо заработаем,<br>
         поднимая его на ваш этаж!
       </p>
-    </section>
-    <div class="section-about">
-      <section>
-        <h2 class="title">Компания «ТЕХНОМАРТ»</h2>
-        <p class="about-item">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
-          строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
-        <p></p>
-        <p class="about-item">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
-          Техномарт работает со многими транспортными компаниями:</p>
-        <ul>
-          <li>Деловые линии</li>
-          <li>Автотрейдинг</li>
-          <li>ЖелДорЭкспедиция</li>
-        </ul>
-        <a class="button" href="#">Подробнее о компании</a>
-      </section>
-
-      <section>
-        <h2 class="title">Контакты</h2>
-        <p class="about-item">Вы можете забрать товар сами,<br>
-          заехав в наш офис.</p>
-        <a href="#">тут будет карта</a>
-        <a class="button" href="#">Заблудились? напишите нам</a>
-      </section>
     </div>
+    </section>
+    <section class="wrapper">
+      <h2 class="title">Компания «ТЕХНОМАРТ»</h2>
+      <p class="about-item">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и<br>
+        строительства не оставит равнодушными любителей сэкномить на гастарбайтерах.</p>
+      <p></p>
+      <p class="about-item">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
+        Техномарт работает со многими транспортными компаниями:</p>
+      <ul>
+        <li>Деловые линии</li>
+        <li>Автотрейдинг</li>
+        <li>ЖелДорЭкспедиция</li>
+      </ul>
+      <a class="button" href="#">Подробнее о компании</a>
+      <h2 class="title">Контакты</h2>
+      <p class="about-item">Вы можете забрать товар сами,<br>
+        заехав в наш офис.</p>
+      <a href="#">тут будет карта</a>
+      <a class="button" href="#">Заблудились? напишите нам</a>
+    </section>
   </main>
-  <footer class="main-footer">
-    <div class="section-footer-first">
+  <footer>
+    <div class="section-footer-first background-nav">
+      <div class="wrapper">
       <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотив Техномарт"></a>
       <address class="address-footer">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
@@ -201,7 +203,9 @@
         <li class="nav-button"><a href="#">Спецпредлжения</a></li>
       </ul>
     </div>
+    </div>
     <div class="section-footer-second">
+      <div class="wrapper">
       <p class="copiright">
         © 2010-2016 Компания «Техномарт»<br>
         Все права защищены
