--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -9,57 +9,64 @@
   <link rel="icon" href="img/favicon-small.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="img/favicon180.png">
   <link rel="manifest" href="manifest.webmanifest">
-
   <link href="css/normalize.css" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400&family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body>
-  <header>
-    <a class="main-header-logo" href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
-    <input class="search" type="search" placeholder="Поиск:">
-    <ul class="list-orders">
-      <li><a class="bookmarks" href="#">Закладки:0<a></li>
-      <li><a class="basket" href="#">Корзина: 0</a></li>
-      <li><a class="ordering" href="#">Оформить заказ</a></li>
-    </ul>
-    <p class="title-header">Интернет-магазин<br>
-      строительных материалов<br>
-      и инструментов для ремонта</p>
-    <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
-    <p class="address">
-      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-    </p>
-    <div class="user-navigation">
-      <a href="#">
-        Войти
-      </a>
-      <a href="#">
-        Регистрация
-      </a>
-    </div>
-    <nav class="main-navigation">
-      <ul class="navigation color-nav">
-        <li class="nav-button"><a href="index.html">Главная</a></li>
-        <li class="nav-button"><a href="#">Компания</a></li>
-        <li class="nav-button"><a href="#">Каталог</a></li>
-        <li class="nav-button"><a href="#">Спецпредложения</a></li>
-        <li class="nav-button"><a href="#">Доставка</a></li>
-        <li class="nav-button"><a href="#">Контакты</a></li>
+<body class="page-body">
+
+
+  <header class="main-header basic-background">
+    <div class="background-nav">
+      <div class="container">
+      <a href="index.html"><img src="img/main-logo.svg" width="220" height="47" alt="Логотип Техномарт"></a>
+      <input class="background-nav" type="search" placeholder="Поиск:">
+      <ul class="list-orders">
+        <li><a class="bookmarks" href="#">Закладки:0<a></li>
+        <li><a class="basket" href="#">Корзина: 0</a></li>
+        <li><a class="ordering" href="#">Оформить заказ</a></li>
       </ul>
-    </nav>
+    </div>
+    </div>
+        <p class="title-header">Интернет-магазин<br>
+          строительных материалов<br>
+          и инструментов для ремонта</p>
+        <a class="telephone" href="tel:+78125550255">+7 (812) 555-05-55</a>
+        <p class="address">
+          г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+        </p>
+      <div class="user-navigation">
+        <a href="#">
+          Войти
+        </a>
+        <a href="#">
+          Регистрация
+        </a>
+      </div>
+      <nav class="main-navigation wrapper">
+        <ul class="navigation color-nav">
+          <li class="nav-button"><a href="index.html">Главная</a></li>
+          <li class="nav-button"><a href="#">Компания</a></li>
+          <li class="nav-button"><a href="#">Каталог</a></li>
+          <li class="nav-button"><a href="#">Спецпредложения</a></li>
+          <li class="nav-button"><a href="#">Доставка</a></li>
+          <li class="nav-button"><a href="#">Контакты</a></li>
+        </ul>
+      </nav>
+    </div>
+    </div>
   </header>
   <main class="main-catalog">
-    <section>
+    <section class="wrapper">
       <ul>
         <li class="catalog-title"><a href="#">Каталог</a></li>
         <li class="catalog-title"><a href="#">Инструменты</a></li>
         <li class="catalog-title"><a href="#">Перфораторы</a></li>
       </ul>
     </section>
-    <section>
+    <section class="wrapper">
       <div class="basic-background">
         <h2 class="service-title">Перфораторы</h2>
       </div>
@@ -95,7 +102,7 @@
         <button class="filter-show" type="submit">Показать</button>
       </form>
     </section>
-    <section class="sorting">
+    <section class="sorting wrapper">
       <span class="filter-title">Сортировка:</span>
       <ul>
         <li class="filter-button"><a href="#">По цене</a></li>
@@ -103,8 +110,8 @@
         <li class="filter-button"><a href="#">По функционалу</a></li>
       </ul>
     </section>
-    <section>
-      <ul>
+    <section class="wrapper">
+      <ul class="drill-list-catalog">
         <li drill-item><a href="#">КУПИТЬ</a>
           <a href="#">В ЗАКЛАДКУ</a>
           <img class="drill-img" src="img/perfor3.jpg" width="144" height="128" alt="Перфоратор BOSCH BFG 6000">
@@ -175,14 +182,17 @@
       </ul>
     </section>
     <section class="basic-background">
+      <div class="wrapper">
       <h2 class="title">Пара слов о перфораторах</h2>
       <p class="about-item">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
         Существуют электромеханические и пневматические перфораторы. Современные модели могут выполнять функции дрели, шуруповерта и отбойного молотка.<br>
         В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и ударная дрель.</p>
+      </div>
     </section>
   </main>
-  <footer class="main-footer">
-    <div class="section-footer-first">
+  <footer>
+    <div class="section-footer-first background-nav">
+      <div class="wrapper">
       <a href="#"><img src="img/semi-logo.svg" width="220" height="68" alt="Логотив Техномарт"></a>
       <address class="address-footer">
         г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
@@ -202,7 +212,9 @@
         <li class="nav-button"><a href="#">Спецпредлжения</a></li>
       </ul>
     </div>
+    </div>
     <div class="section-footer-second">
+      <div class="wrapper">
       <p class="copiright">
         © 2010-2016 Компания «Техномарт»<br>
         Все права защищены
